archive/k8s/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: accounting-platform
  labels:
    name: accounting-platform
    env: production
